@@ -17,8 +17,8 @@ package com.redhat.rhn.frontend.servlets;
 import com.suse.manager.webui.utils.LoginHelper;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Enumeration;
 
 import javax.servlet.ServletException;
@@ -81,7 +81,7 @@ public class CreateRedirectURI {
         return redirectURI.toString();
     }
 
-    private String encode(String string) throws UnsupportedEncodingException {
-        return URLEncoder.encode(string, "UTF-8");
+    private String encode(String string) {
+        return URLEncoder.encode(string, StandardCharsets.UTF_8);
     }
  }
